# kanban

./: LICENSE  PRD.md  README.md  package-lock.json  package.json  vitest.config.ts
.claude/: ralph-loop.local.md
coverage/: coverage-final.json  index.html
coverage/src/: App.tsx.html  index.html
coverage/src/components/: BoardView.tsx.html  Card.tsx.html  CardDetail.tsx.html  Column.tsx.html  Header.tsx.html  NewCardInput.tsx.html  Sidebar.tsx.html  SortableCard.tsx.html  index.html
coverage/src/hooks/: index.html  useAutoSave.ts.html  useKeyboardShortcuts.ts.html  useToast.ts.html
coverage/src/lib/: index.html  storage.ts.html  tauriStorage.ts.html  utils.ts.html
coverage/src/store/: boardStore.ts.html  historyStore.ts.html  index.html  index.ts.html
coverage/src/types/: index.html  (+1 more)
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: integration_tests.rs  lib.rs
src-tauri/src/commands/: backup.rs  boards.rs  cards.rs  columns.rs  mod.rs
src-tauri/src/db/: init.rs  migrations.rs  mod.rs  test_helpers.rs
src/components/: BoardView.test.tsx  BoardView.tsx  Card.test.tsx  Card.tsx  CardDetail.test.tsx  CardDetail.tsx  Column.test.tsx  Column.tsx  Header.tsx  NewCardInput.tsx  Sidebar.tsx  SortableCard.tsx
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  useToast.ts
src/lib/: storage.ts  tauriStorage.ts  utils.test.ts  utils.ts
src/store/: boardStore.test.ts  boardStore.ts  historyStore.test.ts  historyStore.ts  index.ts
src/test/: dndHelpers.ts  mockTauri.ts  setup.ts
src/types/: index.ts
(+9 files in other folders)
